--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -13,15 +13,15 @@ menu.topMenu {
     border-right: 1px solid #c0c0c0;
 }
 
-menu.topMenu.hide {
-    transition: top 0.15s;
-    top: -2.5em;
-}
-menu.topMenu.hide:hover {
-    top: 0;
-}
-
 @media(min-width: 600px) {
+    menu.topMenu.hide {
+        transition: top 0.15s;
+        top: -2.5em;
+    }
+    menu.topMenu.hide:hover {
+        top: 0;
+    }
+
     menu.topMenu {
         text-align: right;
     }
@@ -33,13 +33,35 @@ menu.topMenu.hide:hover {
     }
 }
 @media(max-width: 599px) {
+    menu.topMenu:hover {
+        transition: top 0.15s, max-height 0.3s;
+        max-height: 12em;
+        top: 0;
+    }
     menu.topMenu {
+        position: fixed;
+        z-index: 1000;
         border-left: 0;
         border-right: 0;
         border-radius: 0;
         width: 100%;
         margin: 0;
-        margin-left: -1em;
+        padding: 0;
+        max-height: 3em;
+        top: -9em;
+        transition: top 0.15s, max-height 0.3s;
+    }
+    menu.topMenu::after {
+        position: fixed;
+        top: 0;
+        padding-left: 1em;
+        padding-top: 0.5em;
+        background-color: white;
+        width: 100%;
+        content: url(/hamburger.png);
+    }
+    menu.topMenu:hover::after {
+        position: relative;
     }
 }
 
